Big bunch of styling changes

--- a/src/app/instructions-modal/instructions-modal.component.html
+++ b/src/app/instructions-modal/instructions-modal.component.html
@@ -3,7 +3,7 @@
   <p><strong>film in the gaps</strong> is your daily chance to link two films in as few steps as possible.</p>
   <p>build your solution by connecting film to cast & crew, to their filmographies, and so on.</p>
   <p>each puzzle has a solution of six or less steps but "be our guest" and take as long as you want!</p>
-
+  <p>btw, if you need more context about a film or person, click on them to see their details on TMDB.</p>
   <p class="example-solution">
     <img class="example-solution" src="assets/examplesolution.png">
     e.g. <strong>Spider-Man: Far From Home</strong> stars <strong>Jake Gyllenhaal</strong> who played Jack Twist
@@ -13,7 +13,7 @@
   </p>
 </mat-dialog-content>
 <mat-dialog-actions>
-  <button mat-stroked-button aria-label="understood instructions" [mat-dialog-close]="true" cdkFocusInitial>
+  <button mat-stroked-button class="primary" aria-label="understood instructions" [mat-dialog-close]="true" cdkFocusInitial>
     i'm ready to film in the gaps
   </button>
 
