--- a/src/app/puzzle-page/puzzle-page.component.html
+++ b/src/app/puzzle-page/puzzle-page.component.html
@@ -2,7 +2,7 @@
 <mat-toolbar class="nav-bar">
   <span class="bar-spacer"></span>
   <button mat-icon-button aria-label="Show instructions" (click)="showInstructions()">
-    <mat-icon>info</mat-icon>
+    <mat-icon>info_outline</mat-icon>
   </button>
 </mat-toolbar>
 <div class="center-puzzle">
