--- a/src/app/cast-member-display/cast-member-display.component.scss
+++ b/src/app/cast-member-display/cast-member-display.component.scss
@@ -1,7 +1,7 @@
 
 .cast {
-    width: 140px;
-    height: 200px;
+    width: 210px;
+    height: 300px;
     border-radius: 5px;
     border: rgb(175, 172, 172) 1px solid;
     background-color: rgb(218, 216, 216);
@@ -18,4 +18,9 @@
     }
   }
     
-  
+@media only screen and (max-width: 600px) {
+  .cast {
+    width: 140px;
+    height: 200px;
+  }
+}
