--- a/src/app/puzzle-page/puzzle-page.component.html
+++ b/src/app/puzzle-page/puzzle-page.component.html
@@ -1,10 +1,16 @@
 
 <mat-toolbar class="nav-bar">
   <span class="bar-spacer"></span>
+
+  <button mat-icon-button aria-label="Buy us a coffee" (click)="openKofi()">
+    <mat-icon>favorite_outline</mat-icon>
+  </button>
+
   <button mat-icon-button aria-label="Show instructions" (click)="showInstructions()">
     <mat-icon>info_outline</mat-icon>
   </button>
 </mat-toolbar>
+
 <div class="center-puzzle">
   <div class="bar-spacer"></div>
   <app-puzzle [token]="token" [puzzleId]="puzzleId"></app-puzzle>
