--- a/src/app/movie-display/movie-display.component.html
+++ b/src/app/movie-display/movie-display.component.html
@@ -1,4 +1,4 @@
 <a href="https://themoviedb.org/movie/{{item.id}}" target="_blank" *ngIf="item" class="film poster" title="{{item.title}}">
-    <img *ngIf="item.poster_path" src="https://image.tmdb.org/t/p/w500{{item.poster_path}}">
-    <img *ngIf="!item.poster_path" src="assets/unknown-film.svg">
+    <img *ngIf="item.poster_path" loading="lazy" src="https://image.tmdb.org/t/p/w500{{item.poster_path}}">
+    <img *ngIf="!item.poster_path" loading="lazy" src="assets/unknown-film.svg">
 </a>
