--- a/src/app/solution-metrics-modal/solution-metrics-modal.component.html
+++ b/src/app/solution-metrics-modal/solution-metrics-modal.component.html
@@ -2,12 +2,12 @@
   <h2>🎉 nice one! 🎉</h2>
   <p>you connected <strong>{{data.puzzle.start_movie.title}}</strong> to <strong>{{data.puzzle.end_movie.title}}</strong> in {{data.solution.solution.length - 1}} steps 🥳</p>
   <ul>
-    <li *ngIf="data.metrics.num_solved === 1; else elseBlock1">you're the only person who has filmed in the gaps so far today</li>
-    <ng-template #elseBlock1>
+    <li *ngIf="data.metrics.num_solved === 1; else elseMorePeopleSolved">you're the only person who has filmed in the gaps so far today</li>
+    <ng-template #elseMorePeopleSolved>
       <li>you're one of {{data.metrics.num_solved}} people who have filmed in the gaps today</li>
-      <li *ngIf="!data.solution.count; else elseBlock2">you're the only person who has found this solution</li>
-      <ng-template #elseBlock2>
-        <li>{{data.solution.count}} people have found the same solution as you</li>
+      <li *ngIf="!data.solution.count; else elseMorePeopleSameSolution">you're the only person who has found this solution</li>
+      <ng-template #elseMorePeopleSameSolution>
+        <li>{{data.solution.count}} <span [ngPlural]="data.solution.count"><ng-template ngPluralCase="=1">person</ng-template><ng-template ngPluralCase="other">people</ng-template></span> have found the same solution as you</li>
       </ng-template>
       <li *ngIf="data.solution.token !== data.solution.shortest_solution"><a href="https://degreezle-test.firebaseapp.com/solution/{{data.solution.shortest_solution}}" target="_blank">the shortest solution</a> found so far was {{data.metrics.shortest_solution}} steps long</li>
       <li *ngIf="data.solution.token !== data.solution.longest_solution"><a href="https://degreezle-test.firebaseapp.com/solution/{{data.solution.longest_solution}}" target="_blank">the longest solution</a> found so far was {{data.metrics.longest_solution}} steps long</li>
