--- a/src/app/solution-metrics-modal/solution-metrics-modal.component.html
+++ b/src/app/solution-metrics-modal/solution-metrics-modal.component.html
@@ -7,7 +7,7 @@
       <li>you're one of {{data.metrics.num_solved}} people who have filmed in the gaps today</li>
       <li *ngIf="!data.solution.count; else elseMorePeopleSameSolution">you're the only person who has found this solution</li>
       <ng-template #elseMorePeopleSameSolution>
-        <li>{{data.solution.count}} <span [ngPlural]="data.solution.count"><ng-template ngPluralCase="=1">person</ng-template><ng-template ngPluralCase="other">people</ng-template></span> have found the same solution as you</li>
+        <li>{{data.solution.count}} <span [ngPlural]="data.solution.count"><ng-template ngPluralCase="=1">person has</ng-template><ng-template ngPluralCase="other">people have</ng-template></span> found the same solution as you</li>
       </ng-template>
       <li *ngIf="data.solution.token !== data.solution.shortest_solution"><a href="https://degreezle-test.firebaseapp.com/solution/{{data.solution.shortest_solution}}" target="_blank">the shortest solution</a> found so far was {{data.metrics.shortest_solution}} steps long</li>
       <li *ngIf="data.solution.token !== data.solution.longest_solution"><a href="https://degreezle-test.firebaseapp.com/solution/{{data.solution.longest_solution}}" target="_blank">the longest solution</a> found so far was {{data.metrics.longest_solution}} steps long</li>
