--- a/src/app/solution-metrics-modal/solution-metrics-modal.component.html
+++ b/src/app/solution-metrics-modal/solution-metrics-modal.component.html
@@ -5,15 +5,15 @@
     <li *ngIf="data.metrics.num_solved === 1; else elseMorePeopleSolved">you're the only person who has filmed in the gaps so far today</li>
     <ng-template #elseMorePeopleSolved>
       <li>you're one of {{data.metrics.num_solved}} people who have filmed in the gaps today</li>
-      <li *ngIf="!data.solution.count; else elseMorePeopleSameSolution">you're the only person who has found this solution</li>
+      <li *ngIf="!data.solution.count; else elseMorePeopleSameSolution">but you're the only person who has found this solution</li>
       <ng-template #elseMorePeopleSameSolution>
         <li>{{data.solution.count}} <span [ngPlural]="data.solution.count"><ng-template ngPluralCase="=1">person has</ng-template><ng-template ngPluralCase="other">people have</ng-template></span> found the same solution as you</li>
       </ng-template>
-      <li *ngIf="data.solution.token !== data.solution.shortest_solution"><a href="https://degreezle-test.firebaseapp.com/solution/{{data.solution.shortest_solution}}" target="_blank">the shortest solution</a> found so far was {{data.metrics.shortest_solution}} steps long</li>
+      <li *ngIf="data.solution.solution.length - 1 !== data.metrics.shortest_solution"><a href="https://degreezle-test.firebaseapp.com/solution/{{data.solution.shortest_solution}}" target="_blank">the shortest solution</a> found so far was {{data.metrics.shortest_solution}} steps long</li>
       <li *ngIf="data.solution.token !== data.solution.longest_solution"><a href="https://degreezle-test.firebaseapp.com/solution/{{data.solution.longest_solution}}" target="_blank">the longest solution</a> found so far was {{data.metrics.longest_solution}} steps long</li>
       <li>the average number of steps taken to solve was {{data.metrics.average_steps | number: '1.0-0' }}</li>
       <li>the median number of steps taken to solve was {{data.metrics.median_steps }}</li>
-      <li>your current streak is {{ localStorageService.currentStreak }} and your max is {{ localStorageService.maxStreak }}</li>
+      <li>your current streak is {{ localStorageService.currentStreak }} and your longest streak is {{ localStorageService.maxStreak }}</li>
     </ng-template>
 </ul>
 <p>copy your result to the clipboard with the button below. it'll include a link to your exact solution for people who've already solved or are comfortable with <strong>spoilers</strong> 😉</p>
