--- a/src/app/movie-display/movie-display.component.html
+++ b/src/app/movie-display/movie-display.component.html
@@ -5,6 +5,7 @@
         <img *ngIf="item.poster_path" loading="lazy" src="https://image.tmdb.org/t/p/w500{{item.poster_path}}">
         <img *ngIf="!item.poster_path" loading="lazy" src="assets/unknown-film.svg">
     </a>
+    <div class="view-text">View more about {{item.title}} on TMDB</div>
     <div class="go-corner">
       <div class="go-arrow">
         <mat-icon>open_in_new</mat-icon>
