--- a/src/app/cast-member-display/cast-member-display.component.html
+++ b/src/app/cast-member-display/cast-member-display.component.html
@@ -3,6 +3,7 @@
         <img *ngIf="item.profile_path" loading="lazy" src="https://image.tmdb.org/t/p/w500{{item.profile_path}}" width="150px">
         <img *ngIf="!item.profile_path" loading="lazy" src="assets/unknown-person.svg" width="150px">
     </a>
+    <div class="view-text">View more about {{item.name}} on TMDB</div>
     <div class="go-corner">
         <div class="go-arrow">
            <mat-icon>open_in_new</mat-icon>
