Attempting to improve touch

--- a/src/app/movie-display/movie-display.component.html
+++ b/src/app/movie-display/movie-display.component.html
@@ -1,6 +1,7 @@
 
 
-<a *ngIf="item" class="card" href="https://themoviedb.org/movie/{{item.id}}" target="_blank"> 
+<div class="wrapper">
+    <a *ngIf="item" class="card" href="https://themoviedb.org/movie/{{item.id}}" target="_blank"> 
     <a class="film" title="{{item.title}}">
         <img *ngIf="item.poster_path" loading="lazy" src="https://image.tmdb.org/t/p/w500{{item.poster_path}}">
         <img *ngIf="!item.poster_path" loading="lazy" src="assets/unknown-film.svg">
@@ -12,3 +13,4 @@
       </div>
     </div>
   </a>
+</div>
