--- a/src/app/puzzle-page/puzzle-page.component.html
+++ b/src/app/puzzle-page/puzzle-page.component.html
@@ -2,9 +2,9 @@
 <mat-toolbar class="nav-bar">
   <span class="bar-spacer"></span>
 
-  <button mat-icon-button aria-label="Dark/light mode" (click)="darkMode = !darkMode">
+  <!-- <button mat-icon-button aria-label="Dark/light mode" (click)="darkMode = !darkMode">
     <mat-icon>lightbulb_outline</mat-icon>
-  </button>
+  </button> -->
 
   <button mat-icon-button aria-label="Buy us a coffee" (click)="openKofi()">
     <mat-icon>favorite_outline</mat-icon>
