--- a/src/app/puzzle-page/puzzle-page.component.html
+++ b/src/app/puzzle-page/puzzle-page.component.html
@@ -1,10 +1,16 @@
 
 <mat-toolbar class="nav-bar">
+  <button mat-icon-button aria-label="Reset" (click)="reset()">
+    <mat-icon>restart_alt</mat-icon>
+  </button>
+  
   <span class="bar-spacer"></span>
 
   <!-- <button mat-icon-button aria-label="Dark/light mode" (click)="darkMode = !darkMode">
     <mat-icon>lightbulb_outline</mat-icon>
   </button> -->
+
+ 
 
   <button mat-icon-button aria-label="Buy us a coffee" (click)="openKofi()">
     <mat-icon>favorite_outline</mat-icon>
