--- a/src/app/solution-metrics-modal/solution-metrics-modal.component.html
+++ b/src/app/solution-metrics-modal/solution-metrics-modal.component.html
@@ -20,7 +20,11 @@
   <!-- <p>your average solution length is D steps 🧮</p> -->
   <!-- <p>you’ve solved E puzzles in a row 🀹</p> -->
 </mat-dialog-content>
+
 <mat-dialog-actions>
+  <button mat-stroked-button class="twitter" aria-label="tweet" (click)="openTwitterLink()">
+    post on twitter
+  </button>
   <button mat-stroked-button class="primary" aria-label="copy result" (click)="copySolution()" cdkFocusInitial>
     copy solution
   </button>
