bunch of wee tweaks to modals

--- a/src/app/instructions-modal/instructions-modal.component.html
+++ b/src/app/instructions-modal/instructions-modal.component.html
@@ -7,7 +7,7 @@
   <p class="example-solution">
     <img class="example-solution" src="assets/examplesolution.png">
     e.g. <strong>Spider-Man: Far From Home</strong> stars <strong>Jake Gyllenhaal</strong> who played Jack Twist
-    <strong>Brokeback Mountain</strong> which was directed by <strong>Ang Lee</strong> 
+    in <strong>Brokeback Mountain</strong> which was directed by <strong>Ang Lee</strong> 
     who also directed <strong>Hulk</strong> which starred <strong>Jennifer Connelly</strong> who appeared in 
     <strong>Spider-Man: Homecoming</strong>!
   </p>
