--- a/src/app/puzzle-page/puzzle-page.component.html
+++ b/src/app/puzzle-page/puzzle-page.component.html
@@ -1,17 +1,25 @@
-
 <mat-toolbar class="nav-bar">
   <span class="bar-spacer"></span>
 
   <!-- <button mat-icon-button aria-label="Dark/light mode" (click)="darkMode = !darkMode">
     <mat-icon>lightbulb_outline</mat-icon>
   </button> -->
-
+  <!-- <button mat-icon-button aria-label="Show solution metrics" (click)="showSolutionMetrics()">
+    <span class="material-symbols-outlined">
+      monitoring
+    </span>
+  </button> -->
+  
   <button mat-icon-button aria-label="Buy us a coffee" (click)="openKofi()">
-    <mat-icon>favorite_outline</mat-icon>
+    <span class="material-symbols-outlined">
+      volunteer_activism
+    </span>
   </button>
 
   <button mat-icon-button aria-label="Show instructions" (click)="showInstructions()">
-    <mat-icon>info_outline</mat-icon>
+    <span class="material-symbols-outlined">
+      info
+    </span>
   </button>
 </mat-toolbar>
 
