--- a/src/app/puzzle-page/puzzle-page.component.html
+++ b/src/app/puzzle-page/puzzle-page.component.html
@@ -1,27 +1,38 @@
-<mat-toolbar class="nav-bar">
-  <span class="bar-spacer"></span>
+<div class="nav-bar">
+  <mat-toolbar>
+    <span class="bar-spacer"></span>
 
-  <!-- <button mat-icon-button aria-label="Dark/light mode" (click)="darkMode = !darkMode">
-    <mat-icon>lightbulb_outline</mat-icon>
-  </button> -->
-  <!-- <button mat-icon-button aria-label="Show solution metrics" (click)="showSolutionMetrics()">
-    <span class="material-symbols-outlined">
-      monitoring
-    </span>
-  </button> -->
-  
-  <button mat-icon-button aria-label="Buy us a coffee" (click)="openKofi()">
-    <span class="material-symbols-outlined">
-      volunteer_activism
-    </span>
-  </button>
+    <!-- <button mat-icon-button aria-label="Dark/light mode" (click)="darkMode = !darkMode">
+      <mat-icon>lightbulb_outline</mat-icon>
+    </button> -->
+    <!-- <button mat-icon-button aria-label="Show solution metrics" (click)="showSolutionMetrics()">
+      <span class="material-symbols-outlined">
+        monitoring
+      </span>
+    </button> -->
 
-  <button mat-icon-button aria-label="Show instructions" (click)="showInstructions()">
-    <span class="material-symbols-outlined">
-      info
-    </span>
-  </button>
-</mat-toolbar>
+    <button mat-icon-button aria-label="Buy us a coffee" (click)="openKofi()">
+      <span class="material-symbols-outlined">
+        volunteer_activism
+      </span>
+    </button>
+
+    <button mat-icon-button aria-label="Show instructions" (click)="showInstructions()">
+      <span class="material-symbols-outlined">
+        info
+      </span>
+    </button>
+  </mat-toolbar>
+  <div class="second-menu">
+    <span class="counter">2 steps long</span>
+    <button mat-icon-button aria-label="Reset" (click)="openKofi()" class="">
+      <mat-icon>
+        restart_alt
+      </mat-icon>
+    </button>
+  </div>
+</div>
+
 
 <div class="center-puzzle" [class.dark-mode]="darkMode">
   <div class="bar-spacer"></div>
