--- a/src/app/puzzle-page/puzzle-page.component.scss
+++ b/src/app/puzzle-page/puzzle-page.component.scss
@@ -11,11 +11,10 @@
 .second-menu {
   right: 0;
   position: absolute;
-  background-color: #D52A9F;
-  padding: 10px 16px;
+  border-style: none none solid solid;
+  border-width: 1px;
   border-radius: 0 0 0 10px;
-  background-image: linear-gradient(0deg, #a31275 1%, #D52A9F 100%);
-  color: white;
+  color: #D52A9F;
 
   .counter {
     font-size: 18px;
