Misc FE copy changes

--- a/src/app/instructions-modal/instructions-modal.component.html
+++ b/src/app/instructions-modal/instructions-modal.component.html
@@ -1,12 +1,10 @@
 <mat-dialog-content>
-  <h2>welcome 🤗</h2>
   <p><strong>film in the gaps</strong> is your daily chance to link two films in as few steps as possible.</p>
-  <p>build your solution by connecting film to cast & crew, to their filmographies, and so on.</p>
-  <p>each puzzle has a solution of six or less steps but "be our guest" and take as long as you want!</p>
-  <p>btw, if you need more context about a film or person, click on them to see their details on TMDB.</p>
+  <p>build a solution connecting films to cast & crew, to their filmographies, and so on.</p>
+  <p>each puzzle has a solution of six or fewer steps. if you need more context about a film or person click to see their details on TMDB.</p>
   <p class="example-solution">
     <img class="example-solution" src="assets/examplesolution.png">
-    e.g. <strong>Spider-Man: Far From Home</strong> stars <strong>Jake Gyllenhaal</strong> who played Jack Twist
+    e.g. <strong>Spider-Man: Far From Home</strong> starred <strong>Jake Gyllenhaal</strong> who played Jack Twist
     in <strong>Brokeback Mountain</strong> which was directed by <strong>Ang Lee</strong> 
     who also directed <strong>Hulk</strong> which starred <strong>Jennifer Connelly</strong> who appeared in 
     <strong>Spider-Man: Homecoming</strong>!
