--- a/src/app/our-data-page/our-data-page.component.html
+++ b/src/app/our-data-page/our-data-page.component.html
@@ -1,11 +1,8 @@
 <div class="about">
     <p>
     all data is from TMDB and is cached each day when retrieved. 
-    so updating TMDB today probably won’t help you connect (today_start) to (today_end) 
-    but it will help next time you need that connection to solve the degreezle. 
+    so updating TMDB now won't help you film in today's gaps
+    but it will help next time you need that connection.
     we wholeheartedly encourage you to improve the data quality of TMDB! 🙏
-    </p>
-    <p>
-    if you like the puzzle let us know (if you can’t find us you’ll find us) 🕵️‍♀️
     </p>
 </div>
