Added step reset action

--- a/src/app/puzzle-page/puzzle-page.component.html
+++ b/src/app/puzzle-page/puzzle-page.component.html
@@ -23,9 +23,9 @@
       </span>
     </button>
   </mat-toolbar>
-  <div class="second-menu">
-    <span class="counter">{{stepCount}} steps long</span>
-    <button mat-icon-button aria-label="Reset" (click)="openKofi()" class="">
+  <div class="second-menu" *ngIf="!token">
+    <span class="counter">{{stepCount}} <span [ngPlural]="stepCount"><ng-template ngPluralCase="=1">step</ng-template><ng-template ngPluralCase="other">steps</ng-template></span></span>
+    <button mat-icon-button aria-label="Reset" (click)="reset()" class="reset">
       <mat-icon>
         restart_alt
       </mat-icon>
